--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "recipe-hub",
+  "author": {
+    "name": "Lineng CAO",
+    "email": "lineng.ca@gmail.com",
+    "url": "https://vince-amazing.com"
+  },
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -16,6 +22,7 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "firebase": "^9.8.4",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.17"
   }
