--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.8.4",
     "lodash-es": "^4.17.21",
-    "marked": "^4.0.17"
+    "marked": "^4.0.17",
+    "uuid": "^8.3.2"
   }
 }
