--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Nuxt3 related -----
 node_modules
 *.log*
 .nuxt
@@ -6,3 +7,19 @@ node_modules
 .output
 .env
 dist
+
+# Firebase related -----
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+firebase-debug.log*
+firebase-debug.*.log*
+
+# Firebase cache
+.firebase/
+
+# Firebase config
+.firebaserc
