--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.1.4"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.4",
     "lodash-es": "^4.17.21",
